--- a/src/.jshintrc
+++ b/src/.jshintrc
@@ -11,5 +11,12 @@
   "boss": true,
   "eqnull": true,
   "browser": true,
-  "predef": ["jQuery"]
+  "predef": [
+    "jQuery",
+    "$",
+    "_",
+    "document",
+    "window",
+    "console"
+  ]
 }
